--- a/index.html
+++ b/index.html
@@ -64,7 +64,19 @@
                 <li><a href="index.html" class="active nav-link">Home</a></li>
                 <li class="has-children">
                   <a href="services.html" class="nav-link">Services</a>
-                  <ul class="dropdown"> 
+                  <ul class="dropdown">
+                    <li><a href="#" class="nav-link">Amazing Atmosphere</a></li>
+                    <li><a href="#" class="nav-link">Courteous & Caring Staff</a></li>
+                    <li><a href="#" class="nav-link">Hospice Care</a></li>
+                    <li><a href="#" class="nav-link">Quality Medical Care</a></li>
+                    <li><a href="#" class="nav-link">Excellent Cuisine</a></li>
+                    <li class="has-children">
+                      <a href="#">More Links</a>
+                      <ul class="dropdown">
+                        <li><a href="#">Menu One</a></li>
+                        <li><a href="#">Menu Two</a></li>
+                        <li><a href="#">Menu Three</a></li> 
+           
                       </ul>
                     </li>
                   </ul>
