--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
         <div class="row justify-content-center text-center">
           <div class="col-lg-6 align-self-center">
             <h1 class="heading mb-3">Contact us</h1>
-            <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, modi!</p>
+            
           </div>
         </div>
       </div>  
@@ -195,7 +195,7 @@
         <div class="row">
           <div class="col-lg-4">
             <h2 class="footer-heading mb-4">About</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus ducimus architecto fugiat!</p>
+            <p>To be a Pioneer and Leader in Eldercare in India by providing consistent and holistic care for elderly citizens and thereby make entire Old age for inmates and their loved ones comfortable and enjoyable</p>
             <div class="my-5 social">
               <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
               <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
