--- a/contact.html
+++ b/contact.html
@@ -174,13 +174,11 @@
           <div class="col-lg-3 ml-auto">
             <div class="mb-3">
               <p class="mb-0 font-weight-bold text-black">Address</p>
-              <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+              <p class="mb-4">4715 Algonquin Drive, Cedar Falls, LA 50613 USA</p>
 
-              <p class="mb-0 font-weight-bold text-black">Phone</p>
-              <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
+             
 
-              <p class="mb-0 font-weight-bold text-black">Email Address</p>
-              <p class="mb-0"><a href="#">youremail@domain.com</a></p>
+             
 
             </div>
 
